2000-05-31  Yuuichi Teranishi  <teranisi@quickhack.net>

	* emacs/mhc.el (toplevel): Require 'mhc-xmas on XEmacs.
	Require 'mhc-bm if bitmap is installed.
	(mhc-use-icon-p): New function.
	(mhc-use-icon): New user option.
	(mhc-icon-path): New user option.
	(mhc-scan-month): Call `mhc-icon-setup' if `mhc-use-icon-p' returns t.
	(mhc-sch-scan1): Display icon (Use `mhc-put-icon' and `mhc-get-icon').
	(mhc-scan-month): Set `wl-summary-buffer-name' to avoid treating MHC
	buffer as sticky.

	* emacs/mhc-xmas.el: New module.

	* emacs/mhc-bm.el: Ditto.

2000-05-31  Hideyuki SHIRAI  <shirai@rdmg.mgcs.mei.co.jp>

	* emacs/mhc-calendar.el: New file. MINI calender mode(like 'M-x calendar').

	* emacs/mhc.el, mhc-minibuf.el: adapt to mhc-calendar.el 

	* emacs/mhc-guess.el: tiny typo fix.

2000-05-29  Yoshinari NOMURA  <nom@quickhack.net>

	* 00readme.jis, 00todo.jis, emacs/00usage.jis,
		  samples/DOT.schedule.sample.jp, 00readme: 
	add cvs date indicator Date: in Revised: header.

	* ruby-ext/lib/mhc-palm.rb, ruby-ext/lib/mhc-schedule.rb,
		  ruby-ext/lib/mhc-signal.rb, emacs/mhc-guess.el,
		  emacs/mhc-minibuf.el, emacs/mhc-misc.el,
		  emacs/mhc-schedule.el, emacs/mhc.el, ruby-ext/00readme,
		  ruby-ext/ext-helper.c, ruby-ext/ext-helper.h,
		  ruby-ext/lib/mhc-date.rb, ruby-ext/lib/mhc-gtk.rb,
		  ruby-ext/mhc_pilib.c, 00copyright, adb2mhc,
		  emacs/mhc-date.el, emacs/mhc-face.el, gemcal, mhc-sync,
		  mhc2palm, mscan, palm2mhc, today, today.pl: 
	change copyright notices.

	* NEWS.jis, NEWS : info about 0.25.

	* 00todo.jis : add some memos.

2000-05-27  Yoshinari NOMURA  <nom@quickhack.net>

        * 00changes.jis: obsolete.

	* ChangeLog, NEWS: New file.

2000-05-26  Yoshinari NOMURA  <nom@quickhack.net>

	* emacs/mhc.el: menu fix for xemacs. (thanks to shirai san)

2000-05-26  Yuuichi Teranishi <teranisi@gohome.org>

	* emacs/mhc.el (mhc-scan-month):
	Set `wl-summary-buffer-number-regexp' and
	`wl-summary-buffer-msgdb'.
